[package]
name = "mim"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "mim"

[dependencies]
chrono = "0.4.24"
dirs = "5.0.0"
reqwest = "0.11.15"
ron = "0.8.0"
roxmltree = "0.18.0"
scraper = "0.15.0"
serde = { version = "1.0.158", features = ["derive"]}
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"]}
